--- a/web/src/custom.scss
+++ b/web/src/custom.scss
@@ -6,7 +6,7 @@ $theme-colors: (
   "warning": #ffc107,
   "danger": #dc3545,
   "light": #f8f9fa,
-  "dark": #343a40
+  "dark": #343a40,
 );
 
-@import 'bootstrap/scss/bootstrap.scss';
+@import "bootstrap/scss/bootstrap.scss";
